example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
   
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
  rules:
    - host: hello-world.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
    - host: bye-world.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bye-world
                port:
                  number: 9090
